- fix to avoid the count number being wrapped to a new line. - add more space between the help text and the count, since given some specific resolution, the help text and count will be joined together.

--- a/react/fields/Textarea/Textarea.less
+++ b/react/fields/Textarea/Textarea.less
@@ -60,6 +60,7 @@
   align-items: center;
   min-height: (@grid-row-height * @standard-type-row-span);
   margin-bottom: @grid-row-height;
+  align-items: flex-start;
 }
 
 .help {
@@ -90,6 +91,7 @@
   .standardText();
   color: @sk-mid-gray-dark;
   text-align: right;
+  margin-left: (@grid-gutter-width / 2);
 
   &:only-child {
     flex-basis: 100%;
